chore(docker): add truffleruby 24.0

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -163,6 +163,7 @@ tasks:
   #   task docker:bash RUBY_ENGINE=jruby RUBY_ENGINE_VERSION=9.4
   #   task docker:bash RUBY_ENGINE=jruby RUBY_ENGINE_VERSION=10.0
   #   task docker:bash RUBY_ENGINE=truffleruby RUBY_ENGINE_VERSION=22.3
+  #   task docker:bash RUBY_ENGINE=truffleruby RUBY_ENGINE_VERSION=24.0
   #
   # NOTE: JRuby 9.4 aims CRuby 3.1 compatibility.
   # - https://www.jruby.org/download
@@ -174,6 +175,9 @@ tasks:
   # - https://github.com/oracle/truffleruby/blob/master/doc/user/compatibility.md
   # - https://github.com/oracle/truffleruby/issues/2733
   # - https://github.com/oracle/truffleruby/releases/tag/vm-22.3.0
+  #
+  # NOTE: TruffleRuby 24.0 aims CRuby 3.3 compatibility.
+  # - https://github.com/oracle/truffleruby/releases/tag/graal-24.0.0
   #
   # NOTE: Naming `RUBY_ENGINE` is inspired by `ruby_engine` gem.
   # - https://github.com/janlelis/ruby_engine
@@ -199,6 +203,7 @@ tasks:
   #   RUBY_ENGINE=jruby RUBY_ENGINE_VERSION=9.4 task docker:build
   #   RUBY_ENGINE=jruby RUBY_ENGINE_VERSION=10.0 task docker:build
   #   RUBY_ENGINE=truffleruby RUBY_ENGINE_VERSION=22.3 task docker:build
+  #   RUBY_ENGINE=truffleruby RUBY_ENGINE_VERSION=24.0 task docker:build
   #
   # NOTE: JRuby 9.4 aims CRuby 3.1 compatibility.
   # - https://www.jruby.org/download
@@ -210,6 +215,9 @@ tasks:
   # - https://github.com/oracle/truffleruby/blob/master/doc/user/compatibility.md
   # - https://github.com/oracle/truffleruby/issues/2733
   # - https://github.com/oracle/truffleruby/releases/tag/vm-22.3.0
+  #
+  # NOTE: TruffleRuby 24.0 aims CRuby 3.3 compatibility.
+  # - https://github.com/oracle/truffleruby/releases/tag/graal-24.0.0
   #
   # NOTE: Naming `RUBY_ENGINE` is inspired by `ruby_engine` gem.
   # - https://github.com/janlelis/ruby_engine
@@ -277,6 +285,10 @@ tasks:
         vars:
           RUBY_ENGINE: truffleruby
           RUBY_ENGINE_VERSION: 22.3
+      - task: docker:build
+        vars:
+          RUBY_ENGINE: truffleruby
+          RUBY_ENGINE_VERSION: 24.0
     preconditions:
       - *from-host-os
 
