refactor(docker): use underscore

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,6 +136,7 @@ jobs:
           # TODO: Make ConvenientService TruffleRuby 22.3 compatible.
           #
           # - "truffleruby-22.3"
+          # - "truffleruby-24.0"
     env:
       BUNDLE_GEMFILE: ${{ matrix.gemfile }}
 
