--- a/docker/ruby_2.7/Dockerfile
+++ b/docker/ruby_2.7/Dockerfile
@@ -8,19 +8,19 @@
 #
 # NOTE: Linted by hadolint.
 #
-#   docker run --rm -i ghcr.io/hadolint/hadolint < docker/ruby-2.7/Dockerfile
+#   docker run --rm -i ghcr.io/hadolint/hadolint < docker/ruby_2.7/Dockerfile
 #
 # NOTE: A command to build image.
 #
 #   cd convenient_service
-#   cp Gemfile Gemfile.ruby-2.7
-#   docker build . -f docker/ruby-2.7/Dockerfile -t convenient_service:ruby-2.7
+#   cp Gemfile Gemfile.ruby_2.7
+#   docker build . -f docker/ruby_2.7/Dockerfile -t convenient_service:ruby_2.7
 #   # or `RUBY_ENGINE=ruby RUBY_VERSION=2.7 task docker:build`
 #
 # NOTE: A command to run bash in container.
 #
 #   cd convenient_service
-#   docker run --rm -it -v $(pwd):/gem convenient_service:ruby-2.7 bash
+#   docker run --rm -it -v $(pwd):/gem convenient_service:ruby_2.7 bash
 #   # or `task docker:bash RUBY_ENGINE=ruby RUBY_VERSION=2.7`
 #
 # NOTE: If there are no memory, performance, or cost constraints, prefer to use as standard Linux distribution as it is possible.
