--- a/docker/ruby_3.2/Dockerfile
+++ b/docker/ruby_3.2/Dockerfile
@@ -8,19 +8,19 @@
 #
 # NOTE: Linted by hadolint.
 #
-#   docker run --rm -i ghcr.io/hadolint/hadolint < docker/ruby-3.2/Dockerfile
+#   docker run --rm -i ghcr.io/hadolint/hadolint < docker/ruby_3.2/Dockerfile
 #
 # NOTE: A command to build image.
 #
 #   cd convenient_service
-#   cp Gemfile Gemfile.ruby-3.2
-#   docker build . -f docker/ruby-3.2/Dockerfile -t convenient_service:ruby-3.2
+#   cp Gemfile Gemfile.ruby_3.2
+#   docker build . -f docker/ruby_3.2/Dockerfile -t convenient_service:ruby_3.2
 #   # or `RUBY_ENGINE=ruby RUBY_VERSION=3.2 task docker:build`
 #
 # NOTE: A command to run bash in container.
 #
 #   cd convenient_service
-#   docker run --rm -it -v $(pwd):/gem convenient_service:ruby-3.2 bash
+#   docker run --rm -it -v $(pwd):/gem convenient_service:ruby_3.2 bash
 #   # or `task docker:bash RUBY_ENGINE=ruby RUBY_VERSION=3.2`
 #
 # NOTE: If there are no memory, performance, or cost constraints, prefer to use as standard Linux distribution as it is possible.
