--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -94,6 +94,7 @@ tasks:
   #   APPRAISAL=rails_7.1 task console
   #   APPRAISAL=rails_7.2 task console
   #   APPRAISAL=rails_8.0 task console
+  #   APPRAISAL=rails_8.1 task console
   #   task console
   #
   # NOTE: Setting `APPRAISAL` after `task console` does NOT work. Consider to open an issue.
@@ -512,6 +513,7 @@ tasks:
   #   APPRAISAL=rails_7.1 task playground
   #   APPRAISAL=rails_7.2 task playground
   #   APPRAISAL=rails_8.0 task playground
+  #   APPRAISAL=rails_8.1 task playground
   #   task playground
   #
   # NOTE: Setting `APPRAISAL` after `task playground` does NOT work. Consider to open an issue.
@@ -554,6 +556,7 @@ tasks:
   #   APPRAISAL=rails_7.1 task rspec
   #   APPRAISAL=rails_7.2 task rspec
   #   APPRAISAL=rails_8.0 task rspec
+  #   APPRAISAL=rails_8.1 task rspec
   #
   # NOTE: It is also possible to run specs only for git staged files.
   #   STAGED=true APPRAISAL=rails_7.0 task rspec
@@ -589,7 +592,7 @@ tasks:
       - task: rspec
       - task: rspec
         vars:
-          APPRAISAL: rails_8.0
+          APPRAISAL: rails_8.1
       - task: rspec
         vars:
           APPRAISAL: dry
@@ -602,6 +605,9 @@ tasks:
       - task: rspec
         vars:
           APPRAISAL: memo_wise
+      - task: rspec
+        vars:
+          APPRAISAL: rails_8.0
       - task: rspec
         vars:
           APPRAISAL: rails_7.2
