chore(yard): test url preprocessing

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -57,7 +57,7 @@ jobs:
         run: task docs:generate
       - name: Preprocess URLs
         working-directory: ./
-        run: bin/preprocess_api_docs_links
+        run: API_DOCS_HOST="https://apidocs.convenientservice.org/" bin/preprocess_api_docs_links
       - name: Deploy docs to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
