chore(docker): add Ruby 4.0 preview2

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -168,6 +168,7 @@ tasks:
   #   task docker:bash RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.3
   #   task docker:bash RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.4
   #   task docker:bash RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.5
+  #   task docker:bash RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=4.0
   #   task docker:bash RUBY_ENGINE=jruby RUBY_ENGINE_VERSION=9.4
   #   task docker:bash RUBY_ENGINE=jruby RUBY_ENGINE_VERSION=10.0
   #   task docker:bash RUBY_ENGINE=truffleruby RUBY_ENGINE_VERSION=22.3
@@ -208,6 +209,7 @@ tasks:
   #   RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.3 task docker:build
   #   RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.4 task docker:build
   #   RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=3.5 task docker:build
+  #   RUBY_ENGINE=ruby RUBY_ENGINE_VERSION=4.0 task docker:build
   #   RUBY_ENGINE=jruby RUBY_ENGINE_VERSION=9.4 task docker:build
   #   RUBY_ENGINE=jruby RUBY_ENGINE_VERSION=10.0 task docker:build
   #   RUBY_ENGINE=truffleruby RUBY_ENGINE_VERSION=22.3 task docker:build
@@ -281,6 +283,10 @@ tasks:
         vars:
           RUBY_ENGINE: ruby
           RUBY_ENGINE_VERSION: 3.5
+      - task: docker:build
+        vars:
+          RUBY_ENGINE: ruby
+          RUBY_ENGINE_VERSION: 4.0
       - task: docker:build
         vars:
           RUBY_ENGINE: jruby
