--- a/docker/ruby_4.0/Dockerfile
+++ b/docker/ruby_4.0/Dockerfile
@@ -1,58 +1,27 @@
 ##
-# @author docker-ruby-node Team <https://github.com/timbru31/docker-ruby-node>
 # @author Marian Kostyk <mariankostyk13895@gmail.com>
 # @license LGPLv3 <https://www.gnu.org/licenses/lgpl-3.0.html>
 ##
-
-##
-# Kindly copied from `timbru31/docker-ruby-node`, but replaced `FROM`.
-# - https://github.com/timbru31/docker-ruby-node/blob/master/3.4/20/slim/Dockerfile
-#
-FROM ruby:4.0.0-preview3-slim
-LABEL maintainer "Tim Brust <github@timbrust.de>"
-
-ARG REFRESHED_AT
-ENV REFRESHED_AT $REFRESHED_AT
-ARG NODE_MAJOR=20
-
-# hadolint ignore=DL3009
-RUN apt-get update -qq && apt-get install -qq --no-install-recommends \
-    curl \
-    gnupg2 \
-    libatomic1
-
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-
-RUN printf 'Package: nodejs\nPin: origin deb.nodesource.com\nPin-Priority: 1001' > /etc/apt/preferences.d/nodesource \
-  && mkdir -p /etc/apt/keyrings \
-  && curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
-  && echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list \
-  && apt-get update -qq && apt-get install -qq --no-install-recommends \
-    nodejs \
-  && apt-get upgrade -qq \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*\
-  && npm install -g yarn@1
 
 ##
 # Ruby 4.0 with Node.js 20.x.
 #
 # NOTE: Linted by hadolint.
 #
-#   docker run --rm -i ghcr.io/hadolint/hadolint < docker/ruby_3.4/Dockerfile
+#   docker run --rm -i ghcr.io/hadolint/hadolint < docker/ruby_4.0/Dockerfile
 #
 # NOTE: A command to build image.
 #
 #   cd convenient_service
-#   cp Gemfile Gemfile.ruby_3.4
-#   docker build . -f docker/ruby_3.4/Dockerfile -t convenient_service:ruby_3.4
-#   # or `RUBY_ENGINE=ruby RUBY_VERSION=3.4 task docker:build`
+#   cp Gemfile Gemfile.ruby_4.0
+#   docker build . -f docker/ruby_4.0/Dockerfile -t convenient_service:ruby_4.0
+#   # or `RUBY_ENGINE=ruby RUBY_VERSION=4.0 task docker:build`
 #
 # NOTE: A command to run bash in container.
 #
 #   cd convenient_service
-#   docker run --rm -it -v $(pwd):/gem convenient_service:ruby_3.4 bash
-#   # or `task docker:bash RUBY_ENGINE=ruby RUBY_VERSION=3.4`
+#   docker run --rm -it -v $(pwd):/gem convenient_service:ruby_4.0 bash
+#   # or `task docker:bash RUBY_ENGINE=ruby RUBY_VERSION=4.0`
 #
 # NOTE: If there are no memory, performance, or cost constraints, prefer to use as standard Linux distribution as it is possible.
 # In a general case, you simply won't have enough time to resolve all the "quirks" of more specific distributions if you are an application developer.
@@ -62,9 +31,7 @@ RUN printf 'Package: nodejs\nPin: origin deb.nodesource.com\nPin-Priority: 1001'
 # - https://medium.com/swlh/alpine-slim-stretch-buster-jessie-bullseye-bookworm-what-are-the-differences-in-docker-62171ed4531d
 # - https://hub.docker.com/r/timbru31/ruby-node/tags
 #
-# NOTE: Iron means Node.js 20.x.
-# https://github.com/nodejs/Release
-##
+FROM ruby:4.0.0-preview3-slim
 
 ##
 # NOTE: `bundle install` dependencies.
@@ -76,20 +43,39 @@ RUN printf 'Package: nodejs\nPin: origin deb.nodesource.com\nPin-Priority: 1001'
 # - https://github.com/rails/rails/issues/53306
 # - https://stackoverflow.com/a/77088171/12201472
 #
+# NOTE: `curl` for `go-task`.
+# - https://taskfile.dev/docs/installation
+#
 RUN apt-get update -qq \
   && apt-get install --no-install-recommends -y git \
   && apt-get install --no-install-recommends -y make \
   && apt-get install --no-install-recommends -y gcc \
+  && apt-get install --no-install-recommends -y curl \
   && apt-get install --no-install-recommends -y libz-dev \
   && apt-get install --no-install-recommends -y libyaml-dev \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /gem
+##
+# NOTE: Installs `task`.
+# - https://taskfile.dev/docs/installation
+#
+RUN curl -1sLf 'https://dl.cloudsmith.io/public/task/task/setup.deb.sh' | bash \
+  && apt install task --no-install-recommends -y \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /gem
-
-COPY . /gem
+##
+# NOTE: Intalls Node.js 20.x and `yarn`.
+# - https://github.com/timbru31/docker-ruby-node/blob/master/3.2/16/slim/Dockerfile
+#
+RUN curl -sL https://deb.nodesource.com/setup_20.x | bash -\
+  && apt-get update -qq \
+  && apt-get install -qq --no-install-recommends nodejs \
+  && apt-get upgrade -qq \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*\
+  && npm install -g yarn@1
 
 ENV RUBY_ENGINE=ruby
 
@@ -103,17 +89,16 @@ ENV RUBY_ENGINE_VERSION=4.0
 ENV BUNDLE_GEMFILE=Gemfile.${RUBY_ENGINE}_${RUBY_ENGINE_VERSION}
 
 ##
-# NOTE: Installs `task`.
-# https://taskfile.dev/installation/#install-script
+# NOTE: Is used to check whether a command is executed inside a Docker container. See Rakefile for examples.
+# - https://stackoverflow.com/a/65942222/12201472
 #
-# NOTE: `task` is installed into `~/bin`. That is why `-b /bin` is used. See `echo ${PATH}` to debug.
-#
-RUN sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /bin
+ENV IN_DOCKER_CONTAINER=true
+
+RUN mkdir -p /gem
+
+WORKDIR /gem
+
+COPY . /gem
 
 RUN task deps:install
 
-##
-# NOTE: Is used to check whether a command is executed inside a Docker container. See Rakefile for examples.
-# https://stackoverflow.com/a/65942222/12201472
-#
-ENV IN_DOCKER_CONTAINER=true
