--- a/docker/jruby_10.0/Dockerfile
+++ b/docker/jruby_10.0/Dockerfile
@@ -26,13 +26,10 @@
 #
 # NOTE: If there are no memory, performance, or cost constraints, prefer to use as standard Linux distribution as it is possible.
 # In a general case, you simply won't have enough time to resolve all the "quirks" of more specific distributions if you are an application developer.
-# `jruby:10.0` uses Ubuntu under the hood.s
+# `jruby:10.0` uses Ubuntu under the hood.
 # - https://hub.docker.com/_/jruby/tags
 # - https://github.com/jruby/docker-jruby/blob/master/9.4/jre8/Dockerfile
 # - https://github.com/adoptium/containers/blob/main/19/jdk/ubuntu/jammy/Dockerfile.releases.full#L20
-#
-# NOTE: Gallium means Node.js 16.x.
-# https://github.com/nodejs/Release
 #
 FROM jruby:10.0
 
@@ -40,7 +37,10 @@ FROM jruby:10.0
 # NOTE: `git` is `bundle install` dependency.
 #
 # NOTE: `curl` and `gnupg2` are Node.js 16.x dependencies.
-# https://github.com/timbru31/docker-ruby-node/blob/master/3.2/16/slim/Dockerfile
+# - https://github.com/timbru31/docker-ruby-node/blob/master/3.2/16/slim/Dockerfile
+#
+# NOTE: `curl` for `go-task`.
+# - https://taskfile.dev/docs/installation
 #
 RUN apt-get update -qq \
   && apt-get install --no-install-recommends -y git \
@@ -49,11 +49,26 @@ RUN apt-get update -qq \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /gem
+##
+# NOTE: Installs `task`.
+# - https://taskfile.dev/docs/installation
+#
+RUN curl -1sLf 'https://dl.cloudsmith.io/public/task/task/setup.deb.sh' | bash \
+  && apt install task --no-install-recommends -y \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /gem
-
-COPY . /gem
+##
+# NOTE: Intalls Node.js 20.x and `yarn`.
+# - https://github.com/timbru31/docker-ruby-node/blob/master/3.2/16/slim/Dockerfile
+#
+RUN curl -sL https://deb.nodesource.com/setup_20.x | bash -\
+  && apt-get update -qq \
+  && apt-get install -qq --no-install-recommends nodejs \
+  && apt-get upgrade -qq \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*\
+  && npm install -g yarn@1
 
 ENV RUBY_ENGINE=jruby
 
@@ -67,29 +82,15 @@ ENV RUBY_ENGINE_VERSION=10.0
 ENV BUNDLE_GEMFILE=Gemfile.${RUBY_ENGINE}_${RUBY_ENGINE_VERSION}
 
 ##
-# NOTE: Installs `task`.
-# https://taskfile.dev/installation/#install-script
-#
-# NOTE: `task` is installed into `~/bin`. That is why `-b /bin` is used. See `echo ${PATH}` to debug.
-#
-RUN sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /bin
-
-RUN task deps:install
-
-##
-# NOTE: Intalls Node.js 16.x and `yarn`.
-# https://github.com/timbru31/docker-ruby-node/blob/master/3.2/16/slim/Dockerfile
-#
-RUN curl -sL https://deb.nodesource.com/setup_16.x | bash -\
-  && apt-get update -qq \
-  && apt-get install -qq --no-install-recommends nodejs \
-  && apt-get upgrade -qq \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*\
-  && npm install -g yarn@1
-
-##
 # NOTE: Is used to check whether a command is executed inside a Docker container. See Rakefile for examples.
-# https://stackoverflow.com/a/65942222/12201472
+# - https://stackoverflow.com/a/65942222/12201472
 #
 ENV IN_DOCKER_CONTAINER=true
+
+RUN mkdir -p /gem
+
+WORKDIR /gem
+
+COPY . /gem
+
+RUN task deps:install
