--- a/docker/truffleruby_24.0/Dockerfile
+++ b/docker/truffleruby_24.0/Dockerfile
@@ -28,37 +28,45 @@
 #
 # NOTE: If there are no memory, performance, or cost constraints, prefer to use as standard Linux distribution as it is possible.
 # In a general case, you simply won't have enough time to resolve all the "quirks" of more specific distributions if you are an application developer.
-# `ghcr.io/graalvm/truffleruby:debian-24.0` uses Debian (that is similar to Ubuntu) under the hood.
 # - https://github.com/graalvm/container/pkgs/container/truffleruby-community/193003121?tag=24.0.0-debian
 # - https://github.com/orgs/graalvm/packages?repo_name=container
 # - https://github.com/graalvm/container/blob/master/truffleruby/Dockerfile.debian#L6
 # - https://www.graalvm.org/latest/docs/getting-started/container-images/
 #
-# NOTE: Gallium means Node.js 16.x.
-# https://github.com/nodejs/Release
-#
-FROM ghcr.io/graalvm/truffleruby-community:24.0.0-debian
+FROM ghcr.io/graalvm/truffleruby-community:24.0.0
 
 ##
 # NOTE: `git`, `make`, `gcc` are `bundle install` dependencies.
 #
 # NOTE: `curl` and `gnupg2` are Node.js 16.x dependencies.
-# https://github.com/timbru31/docker-ruby-node/blob/master/3.2/16/slim/Dockerfile
+# - https://github.com/timbru31/docker-ruby-node/blob/master/3.2/16/slim/Dockerfile
 #
-RUN apt-get update -qq \
-  && apt-get install --no-install-recommends -y git \
-  && apt-get install --no-install-recommends -y make \
-  && apt-get install --no-install-recommends -y gcc \
-  && apt-get install --no-install-recommends -y curl \
-  && apt-get install --no-install-recommends -y gnupg2 \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
+# NOTE: `curl` for `go-task`.
+# - https://taskfile.dev/docs/installation
+#
+RUN dnf install -y git \
+  && dnf install -y make \
+  && dnf install -y gcc \
+  && dnf install -y curl \
+  && dnf install -y gnupg2 \
+  && dnf clean all
 
-RUN mkdir -p /gem
+##
+# NOTE: Installs `task`.
+# - https://taskfile.dev/docs/installation
+#
+RUN curl -1sLf 'https://dl.cloudsmith.io/public/task/task/setup.rpm.sh' | bash \
+  && dnf install -y task \
+  && dnf clean all
 
-WORKDIR /gem
-
-COPY . /gem
+##
+# NOTE: Intalls Node.js 20.x and `yarn`.
+# - https://github.com/timbru31/docker-ruby-node/blob/master/3.2/16/slim/Dockerfile
+#
+RUN curl -fsSL https://rpm.nodesource.com/setup_20.x | bash - \
+  && dnf install -y nodejs \
+  && dnf clean all \
+  && npm install -g yarn@1
 
 ENV RUBY_ENGINE=truffleruby
 
@@ -72,29 +80,15 @@ ENV RUBY_ENGINE_VERSION=24.0
 ENV BUNDLE_GEMFILE=Gemfile.${RUBY_ENGINE}_${RUBY_ENGINE_VERSION}
 
 ##
-# NOTE: Installs `task`.
-# https://taskfile.dev/installation/#install-script
-#
-# NOTE: `task` is installed into `~/bin`. That is why `-b /bin` is used. See `echo ${PATH}` to debug.
-#
-RUN sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /bin
-
-RUN task deps:install
-
-##
-# NOTE: Intalls Node.js 16.x and `yarn`.
-# https://github.com/timbru31/docker-ruby-node/blob/master/3.2/16/slim/Dockerfile
-#
-RUN curl -sL https://deb.nodesource.com/setup_16.x | bash -\
-  && apt-get update -qq \
-  && apt-get install -qq --no-install-recommends nodejs \
-  && apt-get upgrade -qq \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*\
-  && npm install -g yarn@1
-
-##
 # NOTE: Is used to check whether a command is executed inside a Docker container. See Rakefile for examples.
-# https://stackoverflow.com/a/65942222/12201472
+# - https://stackoverflow.com/a/65942222/12201472
 #
 ENV IN_DOCKER_CONTAINER=true
+
+RUN mkdir -p /gem
+
+WORKDIR /gem
+
+COPY . /gem
+
+RUN task deps:install
