chore(ci): update continue-on-error condition

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,7 +103,7 @@ jobs:
       # - https://docs.github.com/en/actions/reference/workflows-and-actions/workflow-syntax#jobsjob_idcontinue-on-error
       # - https://docs.github.com/en/actions/reference/workflows-and-actions/expressions#startswith
       #
-      continue-on-error: ${{ startWith(matrix.ruby, "truffleruby") }}
+      continue-on-error: ${{ startsWith(matrix.ruby, "truffleruby") }}
       matrix:
         gemfile:
           - Gemfile
