chore(ci): update continue-on-error condition

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
     # - https://docs.github.com/en/actions/reference/workflows-and-actions/workflow-syntax#jobsjob_idcontinue-on-error
     # - https://docs.github.com/en/actions/reference/workflows-and-actions/expressions#startswith
     #
-    continue-on-error: ${{ startsWith(matrix.ruby, "truffleruby") }}
+    # continue-on-error: ${{ startsWith(matrix.ruby, "truffleruby") }}
     strategy:
       matrix:
         gemfile:
