chore(ci): run benchmarks only after tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -274,8 +274,8 @@ jobs:
           parallel-finished: true
 
   benchmark:
-    # needs:
-    #   - test
+    needs:
+      - test
     runs-on: ubuntu-24.04
     continue-on-error: true
     strategy:
